--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,10 @@
 
 /* Estilos del body */
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Teko", sans-serif;
     line-height: 1.6;
     color: #333;
+    background-color: var(--color-fondo);
 }
 
 /* Estilos del main */
@@ -37,6 +38,54 @@ footer {
     width: 100%;
 }
 
+.navbar{
+    background-color: var(--color-fondo) !important;
+    border-bottom: 0.1rem solid rgb(187, 187, 187);
+}
+
+.navbar a{
+    color: white !important;
+    font-weight: 300px !important;
+    font-size: 23px;
+}
+
+.nav-link{
+    display: inline;
+}
+
+.nav-item{
+    margin: 5px 13px 5px 13px;
+}
+
+.navbar-toggler{
+    background-color: var(--color-botones);
+}
+
+.navbar .nav-link.active {
+  position: relative;
+}
+
+.navbar .nav-link.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0.25rem;           /* ajustá este valor si querés la línea más arriba/abajo */
+  width: 100%;
+  height: 2px;               /* grosor de la línea */
+  background: currentColor;  /* usa el color del texto */
+  transform: scaleX(1);
+  transform-origin: center;  /* crece desde el centro hacia los lados */
+}
+
+.dropdown-menu{
+    background-color: var(--color-fondo);
+    border: 1px solid rgb(187, 187, 187);
+}
+
+.dropdown-item:hover{
+    background-color: var(--color-fondo);
+}
+
 .boton {
     color: white;
     background-color: var(--color-botones);
@@ -51,4 +100,33 @@ footer {
 
 .boton:hover {
     transform: scale(1.05);
+}
+
+section{
+    margin: 50px 0px;
+}
+
+.imagenes{
+    max-width: 60%;
+}
+
+.precios{
+    color: white;
+}
+
+.tarjeta-precios{
+    max-width: 300px;
+}
+.tarjeta-precios .card{
+            box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
+-webkit-box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
+-moz-box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
+}
+
+.card-body{
+    color: var(--color-fondo);
+}
+
+.card-body li{
+    font-size: 30px;
 }
