--- a/css/style.css
+++ b/css/style.css
@@ -38,54 +38,65 @@ footer {
     width: 100%;
 }
 
-.navbar{
+/* Estilos generales para la navbar */
+.navbar {
     background-color: var(--color-fondo) !important;
     border-bottom: 0.1rem solid rgb(187, 187, 187);
 }
 
-.navbar a{
+.navbar-brand {
     color: white !important;
     font-weight: 300px !important;
     font-size: 23px;
 }
 
-.nav-link{
+.navbar-nav .nav-link {
+    color: white !important;
+    font-weight: 300px !important;
+    font-size: 23px;
     display: inline;
 }
 
-.nav-item{
+.navbar-nav .nav-link:hover {
+    color: var(--color-botones) !important;
+}
+
+.navbar-nav .nav-link.active {
+    color: var(--color-botones) !important;
+    font-weight: bold;
+    position: relative;
+}
+
+.navbar-nav .nav-link.active::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0.25rem;
+    width: 100%;
+    height: 2px;
+    background: currentColor;
+    transform: scaleX(1);
+    transform-origin: center;
+}
+
+.nav-item {
     margin: 5px 13px 5px 13px;
 }
 
-.navbar-toggler{
+.navbar-toggler {
     background-color: var(--color-botones);
 }
 
-.navbar .nav-link.active {
-  position: relative;
-}
-
-.navbar .nav-link.active::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0.25rem;           /* ajustá este valor si querés la línea más arriba/abajo */
-  width: 100%;
-  height: 2px;               /* grosor de la línea */
-  background: currentColor;  /* usa el color del texto */
-  transform: scaleX(1);
-  transform-origin: center;  /* crece desde el centro hacia los lados */
-}
-
-.dropdown-menu{
+.dropdown-menu {
     background-color: var(--color-fondo);
     border: 1px solid rgb(187, 187, 187);
 }
 
-.dropdown-item:hover{
+.dropdown-item:hover {
     background-color: var(--color-fondo);
 }
 
+/* Estilos para botones */
 .boton {
     color: white;
     background-color: var(--color-botones);
@@ -94,39 +105,77 @@ footer {
     border-radius: 50px;
     transition: 0.5s ease;
     box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.75);
--webkit-box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.75);
 }
 
 .boton:hover {
     transform: scale(1.05);
 }
 
-section{
+/* Estilos para secciones */
+section {
     margin: 50px 0px;
 }
 
-.imagenes{
+/* Estilos para imágenes */
+.imagenes {
     max-width: 60%;
 }
 
-.precios{
+/* Estilos para precios */
+.precios {
     color: white;
 }
 
-.tarjeta-precios{
+.tarjeta-precios {
     max-width: 300px;
 }
-.tarjeta-precios .card{
-            box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
--webkit-box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
--moz-box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
+
+.tarjeta-precios .card {
+    box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.75);
 }
 
-.card-body{
+.card-body {
     color: var(--color-fondo);
 }
 
-.card-body li{
+.card-body li {
     font-size: 30px;
+}
+
+/* Estilos para la página de planes */
+.planes-body {
+    background-color: var(--color-fondo);
+    color: var(--color-letras);
+}
+
+.planes-card {
+    background-color: var(--color-fondo);
+    border: 2px solid var(--color-letras);
+}
+
+.planes-card-popular {
+    background-color: var(--color-fondo);
+    border: 2px solid var(--color-botones);
+}
+
+.planes-card-header {
+    background-color: var(--color-fondo);
+    border-bottom: 1px solid var(--color-letras);
+}
+
+.planes-card-header-popular {
+    background-color: var(--color-fondo);
+    border-bottom: 1px solid var(--color-botones);
+}
+
+.planes-text {
+    color: var(--color-letras);
+}
+
+.planes-text-popular {
+    color: var(--color-botones);
 }
