--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,32 @@ footer {
     color: var(--color-fondo);
 }
 
+.titulosInicio{
+    font-size: 70px;
+}
+
+.descripcion{
+    font-size: 40px;
+}
+
+.imagenProyecto{
+    max-width: 200px;
+    max-height: 200px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 30px;
+
+}
+.imagenInicio{
+    max-width: 200px;
+    max-height: 200px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border: 4px solid var(--color-letras);
+    border-radius: 100px;
+
+}
+
 /* Estilos para botones */
 .boton {
     color: white;
